# python_labs

./: README.md  pyproject.toml
src/data/lab05/samples/: cities.csv  people.json
src/data/lab06/samples/: people.csv  people.txt
src/data/lab08/: students_input.json  students_output.json
src/data/lab09/: students.csv
src/lab01/: ex02.py  ex03.py  ex04.py  ex05.py
src/lab02/: ex01.py  ex02.py  ex03.py  from typing import List.py
src/lab03/: README.md  text_stats.py
src/lab04/: io_txt_csv.py  text_report.py
src/lab05/: csv_xlsx.py  json_csv.py
src/lab06/: cli_convert.py  cli_text.py
src/lab07/: README.md
src/lab08/: README.md  models.py  serialize.py  verify.py
src/lab09/: README.md  group.py
src/lab10/: README.md  linked_list.py  structures.py
src/lib/: text.py
tests/: test_json_csv.py  test_text.py
