# Проект
[project]
name = "python_labs"
version = "0.1.0"
description = "Python Labs"
readme = "README.md"
requires-python = ">=3.10"


# Зависимости
dependencies = [
    "openpyxl>=3.1.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
]


# Black
[tool.black]
line-length = 88
target-version = ["py310"]


# pytest
[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src",
]
testpaths = ["tests"]
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
